[package]
name = "rust_app"
version = "0.1.0"
edition = "2024"

[dependencies]
glium = "0.36.0"
windows = { version = "0.61.1", features = ["Win32", "Win32_System", "Win32_System_Threading", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_System_ProcessStatus"] }
windows-core = "0.61.0"
winit = { version = "0.30.10", features = [ "rwh_06", "rwh_05"] }
